               add 'addParentRefs' in enforceOpts to write relative $ref properties to describe parent relationships.
                Address GitHub issues:
                        Failed int cast for None in DataTransformFactory #20 and
                        MySQL SchemaDefLoader skip zero values #19
  3-Apr-2019   V0.53 added private schema property _primary_key to mark attributes that are part of an object primary key.
               This feature is controlled by 'addPrimaryKey' enforceOpts property.
  7-Apr-2019   V0.54 adding support for integrating CATH and SCOP structural classifiers and sequence difference type counts.
 11-Apr-2019   V0.55 add tree loaders to etl cli tool, add entity_instance_validation, add a variety of counts, add atc codes.
 13-Apr-2019   V0.56 add prototypical json schema properties '_attribute_groups' mapped to subcategory id/labels.
 17-Apr-2019   V0.57/58 schema and cache adjustments for node tree loading
 25-Apr-2019   V0.59 adds parent source/host organism and polymer monomer counts
  3-May-2019   V0.60 adds helper support for attributes:
                   _rcsb_entry_info.deposited_polymer_monomer_count,
                   _rcsb_entry_info.polymer_entity_count_protein,
                   _rcsb_entry_info.polymer_entity_count_nucleic_acid,
                   _rcsb_entry_info.polymer_entity_count_nucleic_acid_hybrid,
                   _rcsb_entry_info.polymer_entity_count_DNA,
                   _rcsb_entry_info.polymer_entity_count_RNA,
                   _rcsb_entry_info.nonpolymer_ligand_entity_count
                   _rcsb_entry_info.selected_polymer_entity_types
                   _rcsb_entry_info.polymer_entity_taxonomy_count
                   _rcsb_entry_info.assembly_count
                and categories
                    rcsb_entity_instance_domain_scop
                    rcsb_entity_instance_domain_cath